Build fix implemented brevo unit tests now all passing